bootstrap/opam_lexis.c
/* Generated by re2c 2.0.3 on Thu Dec 30 22:07:21 2021 */
#line 1 "bootstrap/opam_lexis.re"
// opam lexer
// re2c $INPUT -o $OUTPUT -i

/* NB: constants for terminals generated from opam_parser.y.
   makeheaders arranges so that any needed here are included in
   opam_lexis.h. Isn't that sweet?
 */

#include <assert.h>
#include <errno.h>
#ifdef LINUX                    /* FIXME */
#include <linux/limits.h>
#else // FIXME: macos test
#include <limits.h>
#endif
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <unistd.h>

#include <sys/errno.h>

#include "log.h"
#include "opam_lexis.h"

#if EXPORT_INTERFACE
#define BUFSIZE 1024
#ifndef MAX_DEPS
#define MAX_DEPS 64
#endif
#endif

const char *deps[MAX_DEPS];
int opam_curr_tag = 0;

/* enable start conditions */
#line 40 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
enum YYCONDTYPE {
	yyc0,
	yycinit,
	yycbuild,
	yycbuildlist,
	yycterm,
	yycterm_filter,
	yyctermlist_filter,
	yycdepends,
	yycfpf,
	yycfvf,
	yyctriplequote,
};
#line 37 "bootstrap/opam_lexis.re"


#if EXPORT_INTERFACE
#include <stdbool.h>
union opam_token_u {
    char c;
    int i;
    char *s;
    bool boolval;
};

struct opam_lexer_s
{
    const char *filename;
    const char *tok;
    const char *cursor;
    const char *limit;
    const char *marker;
    int mode;                   /* i.e. start condition */
};

#endif


void opam_lexer_init(const char*filename,
                     struct opam_lexer_s *lexer,
                     const char *input)
{
    lexer->filename = filename;
    lexer->cursor = input;
}

void opam_lexer_free(opam_lexer_s *lexer)
{
    /* log_debug("lexer_free: %s", lexer->fname); */
    /* utarray_free(lexer->indent_kws); */
}

/* static void mtag(const char *t) */
static void mtag(int t)
{
    /* fprintf(stderr, "mtag ctor idx: %d, s: %.22s\n", opam_curr_tag, t); */
    /* deps[opam_curr_tag++] = t; */
}


/* static void print_tags() { */
/*     /\* fprintf(stderr, "printing %d tags:\n", opam_curr_tag/2); *\/ */
/*     for (int i=0; i < opam_curr_tag/2 ; i++) { */
/*         fprintf(stderr, "\tVALTOK: '%*s'\n", (int)(deps[i*2+1] - deps[i*2]), deps[i*2]); */
/*     } */
/*     /\* fprintf(stderr, "done\n"); *\/ */
/* } */

#define YYMTAGP(t) mtag(YYCURSOR)
#define YYMTAGN(t) mtag(NULL)

int get_next_opam_token(struct opam_lexer_s *lexer, union opam_token_u *otok)
{
#if defined(LEXDEBUG_FVF)
    log_debug("yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
    // only set lexer->mode on initial call
    static bool start = true;
    if (start) {
        lexer->mode = yycfpf;
        log_debug("start mode: %d", lexer->mode);
        start = false;
    }
#elif defined (LEXDEBUG_FPF)
    log_debug("yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
    static bool start = true;
    if (start) {
        lexer->mode = yycfpf;
        log_debug("start mode: %d", lexer->mode);
        start = false;
    }
#elif defined (LEXDEBUG_FILTERS)
    log_debug("yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
    static bool start = true;
    if (start) {
        lexer->mode = yycfvf;
        log_debug("start mode: %d", lexer->mode);
        start = false;
    }
#else
    /* static bool start = true; */
    /* if (start) { */
    /*     lexer->mode = yycinit; */
    /*     log_debug("start mode: %d", lexer->mode); */
    /*     start = false; */
    /* } */
#endif

    /* stags */
    const char *s1, *s2;        /* dq strings */
    /* const char *pkg1, *pkg2; */
    /* const char *pred1, *pred2; */
    /* const char *txt1, *txt2; */

    /* mtags */
    int f1, f2;                 /* flags */
    /* int dep1, dep2; */
    /* const char *vtok1, *vtok2; */

    /* int h1, h2; */
    const char *yyt1;const char *yyt2;
    
loop:
    opam_curr_tag = 0;
    lexer->tok = lexer->cursor;
    
    
#line 170 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
{
	char yych;
	unsigned int yyaccept = 0;
	switch (lexer->mode) {
	case yyc0:
		goto yyc_0;
	case yycinit:
		goto yyc_init;
	case yycbuild:
		goto yyc_build;
	case yycbuildlist:
		goto yyc_buildlist;
	case yycterm:
		goto yyc_term;
	case yycterm_filter:
		goto yyc_term_filter;
	case yyctermlist_filter:
		goto yyc_termlist_filter;
	case yycdepends:
		goto yyc_depends;
	case yycfpf:
		goto yyc_fpf;
	case yycfvf:
		goto yyc_fvf;
	case yyctriplequote:
		goto yyc_triplequote;
	}
/* *********************************** */
yyc_0:
#line 200 "bootstrap/opam_lexis.re"
	{
            /* printf("yycinit: %d, yycdepends: %d, yycfvf: %d\n", */
            /*        yycinit, yycdepends, yycfvf); */
            /* lexer->mode = yycdepends; */
        }
#line 206 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
/* *********************************** */
yyc_init:
	yych = *lexer->cursor;
	switch (yych) {
	case 0x00:	goto yy5;
	case '\t':
	case '\n':
	case ' ':	goto yy9;
	case '!':
		yyt1 = lexer->cursor;
		goto yy12;
	case '"':	goto yy14;
	case '#':	goto yy15;
	case '&':
	case '|':	goto yy17;
	case '(':	goto yy19;
	case ')':	goto yy21;
	case ',':	goto yy23;
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case '_':
		yyt1 = lexer->cursor;
		goto yy25;
	case ':':	goto yy26;
	case '<':
	case '>':
		yyt1 = lexer->cursor;
		goto yy28;
	case '=':	goto yy30;
	case '?':	goto yy32;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'e':
	case 'f':
	case 'g':
	case 'j':
	case 'k':
	case 'q':
	case 'u':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = lexer->cursor;
		goto yy34;
	case '[':	goto yy37;
	case ']':	goto yy39;
	case 'a':
		yyt1 = lexer->cursor;
		goto yy41;
	case 'b':
		yyt1 = lexer->cursor;
		goto yy42;
	case 'c':
		yyt1 = lexer->cursor;
		goto yy43;
	case 'd':
		yyt1 = lexer->cursor;
		goto yy44;
	case 'h':
		yyt1 = lexer->cursor;
		goto yy45;
	case 'i':
		yyt1 = lexer->cursor;
		goto yy46;
	case 'l':
		yyt1 = lexer->cursor;
		goto yy47;
	case 'm':
		yyt1 = lexer->cursor;
		goto yy48;
	case 'n':
		yyt1 = lexer->cursor;
		goto yy49;
	case 'o':
		yyt1 = lexer->cursor;
		goto yy50;
	case 'p':
		yyt1 = lexer->cursor;
		goto yy51;
	case 'r':
		yyt1 = lexer->cursor;
		goto yy52;
	case 's':
		yyt1 = lexer->cursor;
		goto yy53;
	case 't':
		yyt1 = lexer->cursor;
		goto yy54;
	case 'v':
		yyt1 = lexer->cursor;
		goto yy55;
	case '{':	goto yy56;
	case '}':	goto yy58;
	default:	goto yy7;
	}
yy5:
	++lexer->cursor;
#line 420 "bootstrap/opam_lexis.re"
	{
            log_debug("lexing completed");
            return 0;
        }
#line 343 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy7:
	++lexer->cursor;
yy8:
#line 414 "bootstrap/opam_lexis.re"
	{
            fprintf(stderr, "ERROR lexing: %s: %s\n",
                    lexer->filename, lexer->tok);
            exit(-1);
        }
#line 353 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy9:
	yych = *++lexer->cursor;
	switch (yych) {
	case '\t':
	case '\n':
	case ' ':	goto yy9;
	default:	goto yy11;
	}
yy11:
#line 387 "bootstrap/opam_lexis.re"
	{ goto loop; }
#line 365 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy12:
	yych = *++lexer->cursor;
	switch (yych) {
	case '=':	goto yy60;
	default:	goto yy13;
	}
yy13:
#line 222 "bootstrap/opam_lexis.re"
	{ return BANG; }
#line 375 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy14:
	yyaccept = 0;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
	case '"':	goto yy63;
	case '\\':
		yyt1 = lexer->cursor;
		goto yy65;
	default:
		yyt1 = lexer->cursor;
		goto yy61;
	}
yy15:
	yych = *++lexer->cursor;
	switch (yych) {
	case '\n':	goto yy67;
	default:	goto yy15;
	}
yy17:
	++lexer->cursor;
	s1 = lexer->cursor - 1;
	s2 = lexer->cursor;
#line 224 "bootstrap/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            return LOGOP;
        }
#line 403 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy19:
	yyaccept = 1;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
	case '*':	goto yy69;
	default:	goto yy20;
	}
yy20:
#line 207 "bootstrap/opam_lexis.re"
	{ return LPAREN; }
#line 414 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy21:
	++lexer->cursor;
#line 208 "bootstrap/opam_lexis.re"
	{ return RPAREN; }
#line 419 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy23:
	++lexer->cursor;
#line 215 "bootstrap/opam_lexis.re"
	{ return COMMA; }
#line 424 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy25:
	yyaccept = 0;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case '_':	goto yy71;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy34;
	default:	goto yy8;
	}
yy26:
	++lexer->cursor;
#line 214 "bootstrap/opam_lexis.re"
	{ return COLON; }
#line 499 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy28:
	yych = *++lexer->cursor;
	switch (yych) {
	case '=':	goto yy60;
	default:	goto yy29;
	}
yy29:
	s1 = yyt1;
	s2 = lexer->cursor;
#line 217 "bootstrap/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            log_debug("mode %d: RELOP %s", lexer->mode, otok->s);
            return RELOP;
        }
#line 515 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy30:
	++lexer->cursor;
	s1 = lexer->cursor - 1;
	s2 = lexer->cursor;
#line 406 "bootstrap/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            return RELOP;
        }
#line 525 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy32:
	++lexer->cursor;
#line 223 "bootstrap/opam_lexis.re"
	{ return QMARK; }
#line 530 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy34:
	yych = *++lexer->cursor;
yy35:
	switch (yych) {
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy34;
	default:	goto yy36;
	}
yy36:
	s1 = yyt1;
	s2 = lexer->cursor;
#line 401 "bootstrap/opam_lexis.re"
	{
            otok->s = (char*) strndup(s1, (size_t)(s2 - s1));
            return VARIDENT;
        }
#line 609 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy37:
	++lexer->cursor;
#line 209 "bootstrap/opam_lexis.re"
	{ return LBRACKET; }
#line 614 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy39:
	++lexer->cursor;
#line 210 "bootstrap/opam_lexis.re"
	{ return RBRACKET; }
#line 619 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy41:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'u':	goto yy73;
	default:	goto yy35;
	}
yy42:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'u':	goto yy74;
	default:	goto yy35;
	}
yy43:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'o':	goto yy75;
	default:	goto yy35;
	}
yy44:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'e':	goto yy76;
	case 'o':	goto yy77;
	default:	goto yy35;
	}
yy45:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'o':	goto yy78;
	default:	goto yy35;
	}
yy46:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'n':	goto yy79;
	default:	goto yy35;
	}
yy47:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'i':	goto yy80;
	default:	goto yy35;
	}
yy48:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'a':	goto yy81;
	default:	goto yy35;
	}
yy49:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'a':	goto yy82;
	default:	goto yy35;
	}
yy50:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'p':	goto yy83;
	default:	goto yy35;
	}
yy51:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'a':	goto yy84;
	default:	goto yy35;
	}
yy52:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'e':	goto yy85;
	case 'u':	goto yy86;
	default:	goto yy35;
	}
yy53:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'u':	goto yy87;
	case 'y':	goto yy88;
	default:	goto yy35;
	}
yy54:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'a':	goto yy89;
	default:	goto yy35;
	}
yy55:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'e':	goto yy90;
	default:	goto yy35;
	}
yy56:
	++lexer->cursor;
#line 211 "bootstrap/opam_lexis.re"
	{ return LBRACE; }
#line 717 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy58:
	++lexer->cursor;
#line 212 "bootstrap/opam_lexis.re"
	{ return RBRACE; }
#line 722 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy60:
	++lexer->cursor;
	goto yy29;
yy61:
	yych = *++lexer->cursor;
	switch (yych) {
	case '"':	goto yy91;
	case '\\':	goto yy65;
	default:	goto yy61;
	}
yy63:
	yych = *++lexer->cursor;
	switch (yych) {
	case '"':	goto yy93;
	default:	goto yy64;
	}
yy64:
	lexer->cursor = lexer->marker;
	switch (yyaccept) {
	case 0:
		goto yy8;
	case 1:
		goto yy20;
	default:
		goto yy120;
	}
yy65:
	yych = *++lexer->cursor;
	switch (yych) {
	case '\\':	goto yy65;
	default:	goto yy61;
	}
yy67:
	++lexer->cursor;
#line 389 "bootstrap/opam_lexis.re"
	{
            /* return COMMENT; */
            goto loop;          /* skip comments */
        }
#line 762 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy69:
	yych = *++lexer->cursor;
	switch (yych) {
	case '\n':	goto yy64;
	case '*':	goto yy95;
	default:	goto yy69;
	}
yy71:
	yych = *++lexer->cursor;
	switch (yych) {
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case '_':	goto yy71;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy34;
	default:	goto yy64;
	}
yy73:
	yych = *++lexer->cursor;
	switch (yych) {
	case 't':	goto yy97;
	default:	goto yy35;
	}
yy74:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'g':	goto yy98;
	case 'i':	goto yy99;
	default:	goto yy35;
	}
yy75:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'n':	goto yy100;
	default:	goto yy35;
	}
yy76:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'p':	goto yy101;
	case 's':	goto yy102;
	case 'v':	goto yy103;
	default:	goto yy35;
	}
yy77:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'c':	goto yy104;
	default:	goto yy35;
	}
yy78:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'm':	goto yy106;
	default:	goto yy35;
	}
yy79:
	yych = *++lexer->cursor;
	switch (yych) {
	case 's':	goto yy107;
	default:	goto yy35;
	}
yy80:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'c':	goto yy108;
	default:	goto yy35;
	}
yy81:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'i':	goto yy109;
	default:	goto yy35;
	}
yy82:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'm':	goto yy110;
	default:	goto yy35;
	}
yy83:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'a':	goto yy111;
	default:	goto yy35;
	}
yy84:
	yych = *++lexer->cursor;
	switch (yych) {
	case 't':	goto yy112;
	default:	goto yy35;
	}
yy85:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'm':	goto yy113;
	default:	goto yy35;
	}
yy86:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'n':	goto yy114;
	default:	goto yy35;
	}
yy87:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'b':	goto yy115;
	default:	goto yy35;
	}
yy88:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'n':	goto yy116;
	default:	goto yy35;
	}
yy89:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'g':	goto yy117;
	default:	goto yy35;
	}
yy90:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'r':	goto yy118;
	default:	goto yy35;
	}
yy91:
	++lexer->cursor;
	s1 = yyt1;
	s2 = lexer->cursor - 1;
#line 382 "bootstrap/opam_lexis.re"
	{
                otok->s = strndup(s1, (size_t)(s2-s1));
                return STRING;
            }
#line 959 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy93:
	++lexer->cursor;
	lexer->mode = yyctriplequote;
#line 370 "bootstrap/opam_lexis.re"
	{ return TQ; }
#line 965 "bazel-out/darwin-fastbuild/bin/bootstrap/opam_lexis.c"
yy95:
	yych = *++lexer->cursor;
	switch (yych) {
	case '\n':	goto yy64;
	case ')':	goto yy119;
	case '*':	goto yy95;
	default:	goto yy69;
	}
yy97:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'h':	goto yy121;
	default:	goto yy35;
	}
yy98:
	yych = *++lexer->cursor;
	switch (yych) {
	case '-':	goto yy122;
	default:	goto yy35;
	}
yy99:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'l':	goto yy123;
	default:	goto yy35;
	}
yy100:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'f':	goto yy124;
	default:	goto yy35;
	}
yy101:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'e':	goto yy125;
	case 'o':	goto yy126;
	default:	goto yy35;
	}
yy102:
	yych = *++lexer->cursor;
	switch (yych) {
	case 'c':	goto yy127;
	default:	goto yy35;
	}
yy103:
	yych = *++lexer->cursor;
	switch (yych) {
	case '-':	goto yy128;
	default:	goto yy35;
	}
yy104:
	yych = *++lexer->cursor;
	switch (yych) {
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
